tests/neg-custom-args/i2002.scala
class Test {
  def foo(i: Int): Int = i
  def foo(implicit i: Int): Int = i // error
}
